# Nesterenko-thesis-2026-ROS-stack

./: .gitignore  README.md
Huseynli-thesis-2025-ROS-integration/: README.md
Huseynli-thesis-2025-ROS-integration/results/: semubot_rviz2_simulation.webm
Huseynli-thesis-2025-ROS-integration/semubot_raspberry_ws/src/semubot_motor/: package.xml  setup.cfg  setup.py
Huseynli-thesis-2025-ROS-integration/semubot_ros2_ws/src/semubot/: CMakeLists.txt  package.xml
Huseynli-thesis-2025-ROS-integration/semubot_ros2_ws/src/semubot/launch/: display_robot.launch.py
Huseynli-thesis-2025-ROS-integration/semubot_ros2_ws/src/semubot/scripts/: cmd_vel_publisher.py  cmd_vel_serial.py  cmd_vel_to_joint_states.py  odom_broadcaster.py
Huseynli-thesis-2025-ROS-integration/semubot_ros2_ws/src/semubot/urdf/: left_hand.stl  right_hand.stl  semubot.urdf
Mammadov-thesis-2025-face-recognition/: README.md  kinda_normal_frame.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/respeaker_ros/lib/respeaker_ros/: respeaker_node
install/respeaker_ros/share/respeaker_ros/: package.dsv  package.ps1  package.sh  package.xml
install/semubot_bringup/share/semubot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/semubot_description/share/semubot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/semubot_driver/include/semubot_driver/: driver.hpp  hardware.hpp  plugin_joint_state.hpp  plugin_motors.hpp
install/semubot_driver/lib/semubot_driver/: driver_node
install/semubot_driver/share/semubot_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/semubot_eyes/lib/semubot_eyes/: eye_controller
install/semubot_eyes/share/semubot_eyes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/semubot_ros_control/include/omni_robot_control/: semubot_hardware_interface.hpp  semubot_velocity_controller.hpp
log/: latest_build
semubot-firmware/: .gitignore
semubot_backup/: README.md
semubot_backup/Semubot_v1_codes/nuc_backup/Speech_Recogniton_ws/src/semubot_support/: package.xml  setup.cfg  setup.py
semubot_backup/Semubot_v1_codes/nuc_backup/Speech_Recogniton_ws/src/semubot_support/launch/: semubot_bringup.launch.py
semubot_driver/: CMakeLists.txt
semubot_driver/config/: joy_config.yaml  parameters.yaml
semubot_driver/include/semubot_driver/: driver.hpp  hardware.hpp  plugin_joint_state.hpp  plugin_motors.hpp
semubot_driver/launch/: semubot_driver.launch.py
semubot_driver/src/: driver.cpp  driver_node.cpp  hardware.cpp  plugin_joint_state.cpp  plugin_motors.cpp
semubot_ros2_ws/docs/: future_work.md  testing_plan.md
semubot_ros2_ws/media/: README.md
semubot_ros2_ws/src/semubot_arm/: package.xml  setup.py
semubot_ros2_ws/src/semubot_audio/: package.xml  setup.cfg
semubot_ros2_ws/src/semubot_behavior/: package.xml
semubot_ros2_ws/src/semubot_bringup/: package.xml
semubot_ros2_ws/src/semubot_bringup/launch/: mock_robot.launch.py  nav2_mock.launch.py  navigation_readiness.launch.py
semubot_ros2_ws/src/semubot_control/: CMakeLists.txt  package.xml
semubot_ros2_ws/src/semubot_description/: CMakeLists.txt  README.md  package.xml
semubot_ros2_ws/src/semubot_hardware/: package.xml  setup.cfg
semubot_ros2_ws/src/semubot_interfaces/: CMakeLists.txt
semubot_ros2_ws/src/semubot_interfaces/msg/: SystemStatus.msg
semubot_ros2_ws/src/semubot_moveit_config/: CMakeLists.txt
semubot_ros2_ws/src/semubot_navigation/: CMakeLists.txt  package.xml
semubot_ros2_ws/src/semubot_navigation/config/: nav2_params.yaml
semubot_ros2_ws/src/semubot_navigation/launch/: navigation.launch.py  navigation_mock.launch.py
semubot_ros2_ws/src/semubot_navigation/maps/: README.md  empty_map.pgm
semubot_ros2_ws/src/semubot_speech/: setup.cfg
semubot_ros2_ws/src/semubot_system_monitor/: package.xml  setup.cfg  setup.py
semubot_ros2_ws/src/semubot_vision/: package.xml  setup.py
transfer_to_semubot/Nesterenko-thesis-2026-ROS-stack/: README.md  semubot.repos
transfer_to_semubot/Nesterenko-thesis-2026-ROS-stack/docs/: architecture.md  demos.md  getting_started.md  lab_test_protocol.md  nav2_mock_integration.md  navigation_readiness.md  previous_work.md
transfer_to_semubot/Nesterenko-thesis-2026-ROS-stack/src/semubot_test_tools/: CMakeLists.txt  package.xml
transfer_to_semubot/Nesterenko-thesis-2026-ROS-stack/src/semubot_test_tools/launch/: integration_test.launch.py
transfer_to_semubot/Nesterenko-thesis-2026-ROS-stack/src/semubot_test_tools/scripts/: check_navigation_topics.sh  test_cmd_vel.sh  test_cmd_vel_safe.sh
(+134 files in other folders)
