<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semubot_navigation</name>
  <version>0.1.0</version>
  <description>semubot_navigation package for SemuBot ROS 2 stack.</description>
  <maintainer email="semubot@todo.todo">semubot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>semubot_description</depend>
  <depend>semubot_hardware</depend>
  <depend>rviz2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
