<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semubot</name>
  <version>0.0.1</version>
  <description>The semubot package for humanoid robot control, including a URDF model for visualization.</description>

  <maintainer email="omar.2005.22.04@gmail.com">Omar</maintainer>

  <!-- License declaration: Change as needed -->
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>  <!-- ROS2 C++ client library -->
  <depend>std_msgs</depend>  <!-- Standard ROS2 messages -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

